# Major

./: .gitignore  README.md
client/: Cargo.toml  download_wintun.ps1  license.json
client/src/: config.rs  crypto.rs  hardware.rs  main.rs  monitor.rs  tunnel.rs
server/: admin_password.txt  crypto.py  db.py  deploy_ubuntu.md  generate_key.py  init_db.py  main.py  requirements.txt  setup_wireguard.sh  test_admin_api.py  tls_proxy.py  version.py  vm_simulation_guide.md  web.py
server/templates/: dashboard.html  login.html
