[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rsa = "0.9"
x25519-dalek = { version = "=2.0.0-rc.3", features = ["static_secrets"] }
rand = "0.8"
wintun = "0.4"
boringtun = "0.6"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
socket2 = "0.5.3"
wireguard-nt = "0.5.0"
ipnet = "2.9"
native-tls = "0.2"
tokio-native-tls = "0.3"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

